--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "three.interaction": "^0.2.2"
   }
 }
