--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "serve": "webpack-dev-server --port 8080 --host 0.0.0.0 --open"
+    "serve": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "Franklin Castellanos",
